DeveloperOrg/force-app/main/default/objects/teacher__c/teacher__c.object-meta.xml
<CustomObject>
    <label>teacher</label>
    <nameField>
        <label>teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>