DeveloperOrg/force-app/main/default/objects/teacher__c/fields/roll_up__c.field-meta.xml
<CustomField>
    <fullName>roll_up__c</fullName>
    <label>count of student</label>
    <summaryForeignKey>students__c.teacher__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>