DeveloperOrg/force-app/main/default/objects/teacher__c/fields/Taken_Subject__c.field-meta.xml
<CustomField>
    <fullName>Taken_Subject__c</fullName>
    <label>Taken Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>science</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>chemistry</fullName>
            </value>
            <value>
                <fullName>physics</fullName>
            </value>
            <value>
                <fullName>Bioligy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>