DeveloperOrg/force-app/main/default/objects/teacher__c/fields/timings__c.field-meta.xml
<CustomField>
    <fullName>timings__c</fullName>
    <label>timings</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>