DeveloperOrg/force-app/main/default/objects/teacher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Taken_Subject__c</columns>
    <columns>Email__c</columns>
    <columns>Class__c</columns>
    <columns>timings__c</columns>
    <columns>phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>